--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -258,10 +258,19 @@ function everyinterval(n) {
 }
 </script>
 
+<!-- Buttons for starting and pausing the game -->
+<button onclick="startGame()">Start Game</button>
+
 <div id="game-over">
-    <h1>Game Over!</h1>
-    <p>Your final score: <span id="final-score"></span></p>
+    <p>Game Over!</p>
+    <p>Your Score: <span id="final-score"></span></p>
     <button onclick="startGame()">Restart</button>
 </div>
+
+<br>
+<p>Use arrow keys to control the character and space bar to shoot projectiles.</p>
+<p>Shoot the wall between the pillars before you pass through!</p>
+<p>You will be rewarded a point for each wall you break and each pillar you pass.</p>
+
 </body>
 </html>
