--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -59,7 +59,7 @@ function startGame() {
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
         crashSound = new Audio('crash.mp3'); 
-        backgroundMusic = new Audio('background.mp3');
+        backgroundMusic = new Audio('in-the-spotlight-war-213850');
         backgroundMusic.loop = true;
 
         backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/desert background.jpeg", 0, 0, "background");
