--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -58,7 +58,7 @@ function startGame() {
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/toy man_processed.jpeg", 10, 120, "image");
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
-        crashSound = new Audio('canvas_mixxit-8-bit-bomb-explosion'); 
+        crashSound = new Audio('canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); 
         backgroundMusic = new Audio('in-the-spotlight-war-213850.mp3');
         backgroundMusic.loop = true;
 
