--- a/reactchess/chess.html
+++ b/reactchess/chess.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Piece Movement</title>
+  <title>Chess Game with Alternating Turns</title>
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
@@ -17,6 +17,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      font-family: Arial, sans-serif;
     }
 
     #root {
@@ -24,6 +25,13 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
+    }
+
+    .turn-info {
+      color: white;
+      font-size: 18px;
+      margin-bottom: 15px;
+      text-align: center;
     }
   </style>
 </head>
@@ -60,40 +68,55 @@
     function Game() {
       const [game, setGame] = React.useState(initialGameState);
       const [selectedSquare, setSelectedSquare] = React.useState(null);
+      const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
 
       // Handle square click for moving pieces
       function handleClick(row, col) {
         if (gameOver) return;
 
+        const currentPlayer = isWhiteTurn ? 'White' : 'Black';
+
         if (selectedSquare) {
           const [selectedRow, selectedCol] = selectedSquare;
           const selectedPiece = game[selectedRow][selectedCol];
           const targetPiece = game[row][col];
 
-          // Move the piece only if it's a valid move (non-empty to empty or capture)
-          if (selectedPiece && (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece))) {
-            const newGame = game.map(row => row.slice());
+          // Ensure the player can only move their pieces
+          if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
+            // Move the piece if it's a valid move
+            if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
+              const newGame = game.map(row => row.slice());
 
-            // If the king is captured, end the game
-            if (targetPiece.toLowerCase() === 'k') {
-              setGameOver(true);
-              alert('Game Over! King captured.');
+              // If the king is captured, end the game
+              if (targetPiece.toLowerCase() === 'k') {
+                setGameOver(true);
+                alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
+              }
+
+              newGame[row][col] = selectedPiece;
+              newGame[selectedRow][selectedCol] = '';
+
+              setGame(newGame);
+              setSelectedSquare(null);
+              setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
+            } else {
+              setSelectedSquare(null);
             }
-
-            newGame[row][col] = selectedPiece;
-            newGame[selectedRow][selectedCol] = '';
-
-            setGame(newGame);
-            setSelectedSquare(null);
           } else {
             setSelectedSquare(null);
           }
         } else {
-          if (game[row][col]) {
+          // Select the square if it's the player's piece
+          if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
             setSelectedSquare([row, col]);
           }
         }
+      }
+
+      // Check if a piece belongs to the current player
+      function isPlayerPiece(piece, isWhiteTurn) {
+        return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
       }
 
       // Check if a piece belongs to the opponent
@@ -104,8 +127,9 @@
 
       return (
         <div>
+          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
           <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
-          {gameOver && <h2 style={{ color: 'red' }}>Game Over</h2>}
+          {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
         </div>
       );
     }
