--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -48,6 +48,46 @@
     button:hover {
       background-color: #45a049;
     }
+
+    .board-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #4caf50;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    }
+
+    .board {
+      display: grid;
+      grid-template-columns: repeat(8, 80px);
+      grid-template-rows: repeat(8, 80px);
+      gap: 0;
+      border: 2px solid black;
+    }
+
+    .square {
+      width: 80px;
+      height: 80px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      border: 1px solid #999;
+    }
+
+    .light-square {
+      background-color: #f0d9b5;
+    }
+
+    .dark-square {
+      background-color: #b58863;
+    }
+
+    .selected {
+      background-color: #ffeb3b;
+    }
   </style>
 </head>
 <body>
@@ -85,9 +125,8 @@
       const [selectedSquare, setSelectedSquare] = React.useState(null);
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
-      const [gameStarted, setGameStarted] = React.useState(false); // New state for game start
+      const [gameStarted, setGameStarted] = React.useState(false);
 
-      // Handle square click for moving pieces
       function handleClick(row, col) {
         if (gameOver || !gameStarted) return;
 
@@ -98,13 +137,10 @@
           const selectedPiece = game[selectedRow][selectedCol];
           const targetPiece = game[row][col];
 
-          // Ensure the player can only move their pieces
           if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
-            // Move the piece if it's a valid move
             if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
-              // If the king is captured, end the game
               if (targetPiece.toLowerCase() === 'k') {
                 setGameOver(true);
                 alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
@@ -115,7 +151,7 @@
 
               setGame(newGame);
               setSelectedSquare(null);
-              setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
+              setIsWhiteTurn(!isWhiteTurn);
             } else {
               setSelectedSquare(null);
             }
@@ -123,25 +159,21 @@
             setSelectedSquare(null);
           }
         } else {
-          // Select the square if it's the player's piece
           if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
             setSelectedSquare([row, col]);
           }
         }
       }
 
-      // Check if a piece belongs to the current player
       function isPlayerPiece(piece, isWhiteTurn) {
         return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
       }
 
-      // Check if a piece belongs to the opponent
       function isOpponentPiece(piece, target) {
         return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
                (piece.toLowerCase() === piece && target.toUpperCase() === target);
       }
 
-      // Function to start the game
       function startGame() {
         setGameStarted(true);
         setGame(initialGameState);
@@ -149,20 +181,21 @@
         setIsWhiteTurn(true);
       }
 
-      // Function to restart the game
       function restartGame() {
         setGame(initialGameState);
         setSelectedSquare(null);
         setGameOver(false);
         setIsWhiteTurn(true);
-        setGameStarted(true);  // Automatically start after restart
+        setGameStarted(true);
       }
 
       return (
         <div>
           {!gameStarted && <h2 className="turn-info">Press "Start" to begin the game</h2>}
           {gameStarted && <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>}
-          <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          <div className="board-container">
+            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          </div>
           {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
           <div className="button-container">
             {!gameStarted && <button onClick={startGame}>Start Game</button>}
@@ -172,49 +205,30 @@
       );
     }
 
-    // View: Board and buttons reflecting the game state
     function Board({ game, onSquareClick, selectedSquare }) {
       return (
-        <div>
+        <div className="board">
           {game.map((row, rowIndex) => (
-            <div key={rowIndex} style={{ display: 'flex' }}>
-              {row.map((value, colIndex) => (
-                <Square
-                  key={colIndex}
-                  value={value}
-                  onClick={() => onSquareClick(rowIndex, colIndex)}
-                  isLight={(rowIndex + colIndex) % 2 === 0}
-                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-                />
-              ))}
-            </div>
+            row.map((value, colIndex) => (
+              <Square
+                key={`${rowIndex}-${colIndex}`}
+                value={value}
+                onClick={() => onSquareClick(rowIndex, colIndex)}
+                isLight={(rowIndex + colIndex) % 2 === 0}
+                isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+              />
+            ))
           ))}
         </div>
       );
     }
 
     function Square({ value, onClick, isLight, isSelected }) {
-      const squareStyle = {
-        width: '80px',
-        height: '80px',
-        display: 'flex',
-        justifyContent: 'center',
-        alignItems: 'center',
-        cursor: 'pointer',
-        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#f0d9b5' : '#b58863'),
-        border: '1px solid #999'
-      };
-
-      const pieceDisplay = () => {
-        if (value) {
-          return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
-        }
-        return null;
-      };
+      const squareClass = isSelected ? 'square selected' : `square ${isLight ? 'light-square' : 'dark-square'}`;
 
       return (
-        <button style={squareStyle} onClick={onClick}>
-          {pieceDisplay()}
+        <button className={squareClass} onClick={onClick}>
+          {value && <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />}
         </button>
       );
     }
