--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Start and Restart</title>
+  <title>Chess Game with Alternating Turns</title>
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
@@ -27,66 +27,11 @@
       box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
     }
 
-    .turn-info, .button-container {
+    .turn-info {
       color: white;
       font-size: 18px;
       margin-bottom: 15px;
       text-align: center;
-    }
-
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      border: none;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
-    .board-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #4caf50;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-    }
-
-    .board {
-      display: grid;
-      grid-template-columns: repeat(8, 80px);
-      grid-template-rows: repeat(8, 80px);
-      gap: 0;
-      border: 2px solid black;
-    }
-
-    .square {
-      width: 80px;
-      height: 80px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      border: 1px solid #999;
-    }
-
-    .light-square {
-      background-color: #f0d9b5;
-    }
-
-    .dark-square {
-      background-color: #b58863;
-    }
-
-    .selected {
-      background-color: #ffeb3b;
     }
   </style>
 </head>
@@ -125,10 +70,10 @@
       const [selectedSquare, setSelectedSquare] = React.useState(null);
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
-      const [gameStarted, setGameStarted] = React.useState(false);
 
+      // Handle square click for moving pieces
       function handleClick(row, col) {
-        if (gameOver || !gameStarted) return;
+        if (gameOver) return;
 
         const currentPlayer = isWhiteTurn ? 'White' : 'Black';
 
@@ -137,10 +82,13 @@
           const selectedPiece = game[selectedRow][selectedCol];
           const targetPiece = game[row][col];
 
+          // Ensure the player can only move their pieces
           if (selectedPiece && isPlayerPiece(selectedPiece, isWhiteTurn)) {
+            // Move the piece if it's a valid move
             if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
+              // If the king is captured, end the game
               if (targetPiece.toLowerCase() === 'k') {
                 setGameOver(true);
                 alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
@@ -151,7 +99,7 @@
 
               setGame(newGame);
               setSelectedSquare(null);
-              setIsWhiteTurn(!isWhiteTurn);
+              setIsWhiteTurn(!isWhiteTurn);  // Alternate the turn after a move
             } else {
               setSelectedSquare(null);
             }
@@ -159,76 +107,76 @@
             setSelectedSquare(null);
           }
         } else {
+          // Select the square if it's the player's piece
           if (game[row][col] && isPlayerPiece(game[row][col], isWhiteTurn)) {
             setSelectedSquare([row, col]);
           }
         }
       }
 
+      // Check if a piece belongs to the current player
       function isPlayerPiece(piece, isWhiteTurn) {
         return isWhiteTurn ? piece === piece.toUpperCase() : piece === piece.toLowerCase();
       }
 
+      // Check if a piece belongs to the opponent
       function isOpponentPiece(piece, target) {
         return (piece.toUpperCase() === piece && target.toLowerCase() === target) || 
                (piece.toLowerCase() === piece && target.toUpperCase() === target);
       }
 
-      function startGame() {
-        setGameStarted(true);
-        setGame(initialGameState);
-        setGameOver(false);
-        setIsWhiteTurn(true);
-      }
-
-      function restartGame() {
-        setGame(initialGameState);
-        setSelectedSquare(null);
-        setGameOver(false);
-        setIsWhiteTurn(true);
-        setGameStarted(true);
-      }
-
       return (
         <div>
-          {!gameStarted && <h2 className="turn-info">Press "Start" to begin the game</h2>}
-          {gameStarted && <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>}
-          <div className="board-container">
-            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
-          </div>
+          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
+          <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
           {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
-          <div className="button-container">
-            {!gameStarted && <button onClick={startGame}>Start Game</button>}
-            {gameStarted && <button onClick={restartGame}>Restart Game</button>}
-          </div>
         </div>
       );
     }
 
+    // View: Board and buttons reflecting the game state
     function Board({ game, onSquareClick, selectedSquare }) {
       return (
-        <div className="board">
+        <div>
           {game.map((row, rowIndex) => (
-            row.map((value, colIndex) => (
-              <Square
-                key={`${rowIndex}-${colIndex}`}
-                value={value}
-                onClick={() => onSquareClick(rowIndex, colIndex)}
-                isLight={(rowIndex + colIndex) % 2 === 0}
-                isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-              />
-            ))
+            <div key={rowIndex} style={{ display: 'flex' }}>
+              {row.map((value, colIndex) => (
+                <Square
+                  key={colIndex}
+                  value={value}
+                  onClick={() => onSquareClick(rowIndex, colIndex)}
+                  isLight={(rowIndex + colIndex) % 2 === 0}
+                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+                />
+              ))}
+            </div>
           ))}
         </div>
       );
     }
 
     function Square({ value, onClick, isLight, isSelected }) {
-      const squareClass = isSelected ? 'square selected' : `square ${isLight ? 'light-square' : 'dark-square'}`;
+      const squareStyle = {
+        width: '80px',
+        height: '80px',
+        display: 'flex',
+        justifyContent: 'center',
+        alignItems: 'center',
+        cursor: 'pointer',
+        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
+        border: '1px solid #999'
+      };
+
+      const pieceDisplay = () => {
+        if (value) {
+          return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
+        }
+        return null;
+      };
 
       return (
-        <button className={squareClass} onClick={onClick}>
-          {value && <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />}
+        <button style={squareStyle} onClick={onClick}>
+          {pieceDisplay()}
         </button>
       );
     }
