--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -33,6 +33,34 @@
       margin-bottom: 15px;
       text-align: center;
     }
+
+    button {
+      padding: 10px 20px;
+      margin: 10px;
+      border: none;
+      background-color: #4CAF50;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    .button-container {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    .board-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
+
   </style>
 </head>
 <body>
@@ -70,10 +98,11 @@
       const [selectedSquare, setSelectedSquare] = React.useState(null);
       const [isWhiteTurn, setIsWhiteTurn] = React.useState(true);
       const [gameOver, setGameOver] = React.useState(false);
+      const [gameStarted, setGameStarted] = React.useState(false);
 
       // Handle square click for moving pieces
       function handleClick(row, col) {
-        if (gameOver) return;
+        if (gameOver || !gameStarted) return;
 
         const currentPlayer = isWhiteTurn ? 'White' : 'Black';
 
@@ -125,10 +154,30 @@
                (piece.toLowerCase() === piece && target.toUpperCase() === target);
       }
 
+      function startGame() {
+        setGameStarted(true);
+        setGame(initialGameState);
+        setGameOver(false);
+        setIsWhiteTurn(true);
+      }
+
+      function restartGame() {
+        setGame(initialGameState);
+        setSelectedSquare(null);
+        setGameOver(false);
+        setIsWhiteTurn(true);
+      }
+
       return (
         <div>
-          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
-          <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          <h2 className="turn-info">{gameStarted ? (isWhiteTurn ? "White's Turn" : "Black's Turn") : 'Press Start to Begin'}</h2>
+          <div className="board-container">
+            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+          </div>
+          <div className="button-container">
+            {!gameStarted && <button onClick={startGame}>Start Game</button>}
+            {gameStarted && <button onClick={restartGame}>Restart Game</button>}
+          </div>
           {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
         </div>
       );
@@ -163,7 +212,7 @@
         justifyContent: 'center',
         alignItems: 'center',
         cursor: 'pointer',
-        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
+        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#f0d9b5' : '#b58863'),
         border: '1px solid #999'
       };
 
